--- a/manuscripts/24-john-kerr-growth-trust-science/24-jk-growth-trust-science-T15.tex
+++ b/manuscripts/24-john-kerr-growth-trust-science/24-jk-growth-trust-science-T15.tex
@@ -311,52 +311,59 @@ substantial practical interest and concern
 (\citeproc{ref-kennedy2022americans}{Kennedy \emph{et al.} 2022};
 \citeproc{ref-pagliaro2021trust}{Pagliaro \emph{et al.} 2021};
 \citeproc{ref-sturgis2021trust}{Sturgis \emph{et al.} 2021}). Public
-trust in science helps shapes behaviour from the uptake of vaccination
-and other public health measures
-(\citeproc{ref-rueger2021perception}{Rueger \emph{et al.} 2021}) to
-support for climate action (\citeproc{ref-bogert2024effect}{Bogert
-\emph{et al.} 2024}). Yet, accurately documenting trends in scientific
-mistrust is challenging because individuals with lower trust in science
-are less likely to participate in scientific studies, biasing results
+trust in science shapes behaviours from the uptake of vaccination and
+other public health measures (\citeproc{ref-rueger2021perception}{Rueger
+\emph{et al.} 2021}) to support for climate action
+(\citeproc{ref-bogert2024effect}{Bogert \emph{et al.} 2024}). Yet,
+accurately documenting population trends is challenging because
+individuals with lower trust in science may be less likely to
+participate in scientific studies, biasing results
 (\citeproc{ref-kreps2020model}{Kreps and Kriner 2020};
 \citeproc{ref-reif2021representative}{Reif and Guenther 2021}).
 
 This study draws on five waves of national panel data collected between
-2019 and 2024 from 42,681 participants in the New Zealand Attitudes and
-Values Study (NZAVS). Focusing on a 2019 baseline cohort, we estimate
-annual response trajectories for attitudes towards science and trust in
-scientists. To address attrition and systematic nonresponse, we apply
-multiple imputation models. By comparing the results of these adjusted
-models with unadjusted models in the restricted sample, we obtain a
-minimum bound for bias from differential attrition. This estimate is
-useful for gauging bias from cross-sectional data.
+2019 and 2024 from the New Zealand Attitudes and Values Study (NZAVS).
+We focus on change over time in the 2019 baseline cohort of 42,681
+participants, estimating annual response trajectories for two domains of
+institutional trust: (1) attitudes about the social value of science,
+and (2) trust in scientists. To address attrition and systematic
+nonresponse, we apply multiple imputation models that are appropriate
+for panel data. By comparing the pooled results of these models to
+unadjusted models in a restricted sample, we clarify how observed trends
+among the retained sample may be biased. Although this bias estimate
+only represents a minimum bound---given that those who never
+participated might be even less trusting---at least some individuals
+with low trust were apparently willing to stick around. Because our
+objective is to include the perspectives of the mistrusting, this
+finding is reassuring.
 
-In \textbf{Study 1a}, we examine changes in the average value placed on
-science each year, comparing observed data with results that adjust for
-missingness. \textbf{Study 1b} mirrors this approach for trust in
-scientists, treating response as continuous variables. In \textbf{Study
-2a}, we classify responses into low (1--3), medium (4--5), or high
-(6--7) categories for the value placed on science, and \textbf{Study 2b}
-applies the same categorical approach to trust in scientists, again
-forcussing on probabilities for classification. These categorical models
-enable us to capture patterns not evident from mean scores alone,
-revealing potential social divisions in attitudes toward science and
-scientists.
+In \textbf{Study 1a}, we analyse annual trends in the average value
+placed on science, comparing observed responses with results that adjust
+for missing data. \textbf{Study 1b} applies the same framework to trust
+in scientists, again treating responses as continuous variables. In
+\textbf{Study 2a}, we classify respondents into low (1--3), medium
+(4--5), or high (6--7) categories for the value placed on science.
+\textbf{Study 2b} extends this categorical approach to trust in
+scientists, focussing on the probabilities of falling into each
+category. By considering these categorical models, we identify patterns
+that remain hidden when examining means alone, potentially uncovering
+meaningful social divisions in attitudes toward science and scientists.
 
-This work is descriptive and exploratory. Our primary objective is to
-characterise changes in institutional trust over time, focussing on how
-the value placed on science and trust in scientists evolve. By comparing
-raw estimates with those adjusted for missing data, we clarify how
-nonresponse can bias conclusions about trends in public trust.
+This work is descriptive and exploratory. Our analysis does not identify
+causal drivers of these trends that we report, but rather provides
+descriptive insights into how trust distributions evolve over time among
+those already willing to participate in a scientific study, in a setting
+where there is likely bias from selective attrition among science's
+discontents.
 
 \subsection{Method}\label{method}
 
 \subsubsection{Target Population}\label{target-population}
 
 The target population for this study comprises the cohort of New Zealand
-residents in wave 2019 whose mistrust of science was not so great as to
-prevent participation in the New Zealand Attitudes and Values Study
-(NZAVS) that year. Our objective is to infer population dynamics for
+residents in wave 2019 whose mistrust of science was not so great at
+that time as to prevent participation in the New Zealand Attitudes and
+Values Study (NZAVS). Our objective is to infer population dynamics for
 this cohort by using responses from individuals who took part in the
 NZAVS during the 2019 baseline wave, applying weights derived from the
 2018 New Zealand Census to account for age, gender, and ethnicity
@@ -394,12 +401,20 @@ context for the timing of responses and potential nonresponse.
 
 \subsection{Measures}\label{measures}
 
-We estimated target population average responses for two indicators
-attitudes to science, one that relates to the social value of science
-and another that measures trust in scientists (refer to Schoor and
-Schütz (\citeproc{ref-schoor2021science}{2021}) and Gundersen and Holst
-(\citeproc{ref-gundersen2022science}{2022}) on the importance of these
-distinctions). Item wording is as follows.
+Our analysis distinguishes between attitudes about the social value of
+science and and trusting attitudes towards scientists.
+
+It is plausible that at least some who disagree with society's emphasis
+on science are nevertheless trusting of scientific institutions.
+
+On the other hand, it is the solomn duty of every scientist to doubt
+scientists. That is, mistrust of scientists is an institutional
+cornerstone of science. (Refer to Schoor and Schütz
+(\citeproc{ref-schoor2021science}{2021}) and Gundersen and Holst
+(\citeproc{ref-gundersen2022science}{2022}) on the importance of
+distinguishing between types of institutional mistrust of science).
+
+Item wording is as follows.
 
 \paragraph{Social Value of Science}\label{social-value-of-science}
 
@@ -415,33 +430,27 @@ Ordinal response: (1 = Strongly Disagree, 7 = Strongly Agree)
 Ordinal response: (1 = Strongly Disagree, 7 = Strongly Agree)
 (\citeproc{ref-nisbet2015}{Nisbet \emph{et al.} 2015}).
 
-Note again that each item addresses a different attitude to science. It
-is plausible that at least some who disagree with society's emphasis on
-science are nevertheless trusting of scientific institutions. On the
-other hand, and notably, the mistrust of scientists is an institutional
-cornerstone of science. It is the solomn duty of every scientists to
-doubt.
-
 \subsubsection{Missing Data}\label{missing-data}
 
-We face two primary challenges when estimating population-level trends.
+We face two primary challenges when estimating population-level trends
+for institutional trust in science.
 
 First, although the New Zealand Attitudes and Values Study uses a
 national probability sampling strategy, only about 10\% of those invited
-participate. It is credible that the proportion of those who do not
-value science or who mistrust scientists are under-represented in the
-sample. After all, the New Zealand Attitudes and Values Study is run by
-scientists aiming to foster scientific understanding. For this reason,
-it is challenging to estimate mistrust of science using surveys of the
-general population (\citeproc{ref-reif2021representative}{Reif and
-Guenther 2021}).
+to the study participate. It is credible that the proportion of those
+who do not value science or who mistrust scientists are
+under-represented in the sample because the New Zealand Attitudes and
+Values Study is run by scientists. Our sample population inferences are
+unlikely to directly transport to the population of New Zealand
+(\citeproc{ref-reif2021representative}{Reif and Guenther 2021}).
 
 Second, although the NZAVS retains between 70--80\% of its sample each
-year, attrition is inevitable. It is credible that the proportion of
-those who do not value science or who mistrust scientists becames
-increasingly under-represented in the longitudinal sample. For this
-reason, it is challenging to estimate mistrust of science in a
-longitudinal cohort.
+year, panel attrition is inevitable. It is credible that a proportion of
+those who devalue science or mistrust scientists is increasingly
+diminished over time. Obtaining valid inferences for baseline cohort
+trajectories of mistrust is challenging because people do not report
+their reasons for withdrawing, and some loss will be undirected (for
+example mortality).
 
 We cannot overcome the first challenge. We lack direct information about
 mistrust in the population of non-participants.
@@ -449,10 +458,14 @@ mistrust in the population of non-participants.
 However, for those who participated in 2019 but dropped out later, we
 can adjust estimates under the assumption that the probability of
 attrition or missing response is predictable given observed covariates,
-including previous attitudes to science. Methods for multiple imputation
-adjust for bias by incorporating missing data uncertainty into estimates
-(\citeproc{ref-blackwell_2017_unified}{Blackwell \emph{et al.} 2017};
-\citeproc{ref-bulbulia2023a}{Bulbulia \emph{et al.} 2023}).
+including previous attitudes to science, together with an appropriately
+specified statistical model for imputing missing responses. Although
+these estimates carry modelling assumptions, the development of robust
+multiple imputation strategies suitable for panel data means that
+undertainty about missing data can be incorporated into models of
+longitudinal trends (\citeproc{ref-blackwell_2017_unified}{Blackwell
+\emph{et al.} 2017}; \citeproc{ref-bulbulia2023a}{Bulbulia \emph{et al.}
+2023}).
 
 Here, we used the \texttt{Amelia} package in R
 (\citeproc{ref-amelia_2011}{Honaker \emph{et al.} 2011}) to create ten
@@ -462,71 +475,49 @@ science and scientists as ordinal responses bounded by 1 and 7 on the
 response scale. The Amelia algorithm is designed for within-unit
 imputation in repeated-measures time-series data. All covariates in
 Table~\ref{tbl-demography} were included. The time variable (year) was
-modelled as a cubic spline to capture non-linear trends over four years.
-The code for the analysis is deposited here: (\textbf{OSF Link HERE}).
+modelled as a cubic spline to capture non-linear trends over the five
+waves. The code for the analysis is deposited here:
+\href{https://osf.io/wgtz4/}{OSF link}.
 
 \subsubsection{Statistical Estimator}\label{statistical-estimator}
 
-In Study 1a and Study 1b, we estimated mean responses for value placed
-on science and trust in scientists over time using generalised
-estimating equations (GEE). We implemented these models with the geepack
-package (\citeproc{ref-geepack_2006}{Halekoh \emph{et al.} 2006}). By
-specifying participant id as the clustering variable, we adjusted for
-repeated observations and obtained robust standard errors
-(\citeproc{ref-mcneish_2017unnecessary}{McNeish \emph{et al.} 2017}). We
-weighted the data using sample weights derived from the 2018 New Zealand
-Census, ensuring that our estimates reflect population-level trends. We
-fitted separate models for each of the ten imputed datasets and pooled
-the results using Rubin's rule, thereby incorporating uncertainty from
-the missing data process into all population estimates. We generated
+In Studies 1a and 1b, we estimate mean responses for (1a) values placed
+on science and (1b) trust in scientists over time using generalised
+estimating equations (GEE). We implement these models with the
+\texttt{geepack} package (\citeproc{ref-geepack_2006}{Halekoh \emph{et
+al.} 2006}). By specifying each participant's id as the clustering
+variable, we adjust for repeated observations and obtained robust
+standard errors (\citeproc{ref-mcneish_2017unnecessary}{McNeish \emph{et
+al.} 2017}). We weight the data using post-stratification sample weights
+derived from the 2018 New Zealand Census for age, gender, and ethnicity.
+We fit separate models for each of the ten imputed datasets and pool
+results using Rubin's rule, thereby incorporating uncertainty from the
+missing data process into our population estimates. We generate
 predicted means and their associated confidence intervals using
 \texttt{ggeffects} (\citeproc{ref-ggeffects_2018}{Ludecke 2018}).
 
-In Study 2a and Study 2b, we examined predicted probabilities of
-attitudes to science and scientists in three discrete categories: low
-(1--3), medium (4--5), and high (6--7). For these analyses, we employed
-neural network models using the \texttt{nnet} package
+In Studies 2a and 2b, we examine predicted probabilities for attitudes
+to science and scientists in three discrete categories: low (1--3),
+medium (4--5), and high (6--7). For these analyses, we employ neural
+network models using the \texttt{nnet} package
 (\citeproc{ref-nnet_2002}{Venables and Ripley 2002}). These models
-provided category-specific probability estimates at each time point. We
-applied sample weights constructed from the 2018 Census data to ensure
+estimate category-specific probabilities at each time point. We applied
+sample weights constructed from the 2018 Census data to better ensure
 population representativeness, and again used Rubin's rule to combine
-inferences across imputed datasets. We incorporated robust standard
-errors appropriate for clustered data and produced predictions and
-confidence intervals with \texttt{ggeffects}
-(\citeproc{ref-ggeffects_2018}{Ludecke 2018}). The final tables and
-figures were created using \texttt{tinytable}
-(\citeproc{ref-tinytable_2024}{Arel-Bundock 2024}), \texttt{ggplot2}
-(\citeproc{ref-ggplot2_2016}{Wickham 2016}), and \texttt{margot}
-(\citeproc{ref-margot2024}{Bulbulia 2024}).
+inferences across imputed datasets. We incorporate robust standard
+errors appropriate for clustered data and graph predictions and
+confidence intervals using \texttt{ggeffects}
+(\citeproc{ref-ggeffects_2018}{Ludecke 2018}). The tables and figures
+reported below were created using \texttt{tinytable}
+(\citeproc{ref-tinytable_2024}{Arel-Bundock 2024}), \texttt{table1}
+(\citeproc{ref-table1_2023}{Rich 2023}), \texttt{parameters}
+(\citeproc{ref-parameters_2020}{Lüdecke \emph{et al.} 2020}),
+\texttt{tidyverse} (\citeproc{ref-tidyverse_2019}{Wickham \emph{et al.}
+2019}), \texttt{ggplot2} (\citeproc{ref-ggplot2_2016}{Wickham 2016}),
+and \texttt{margot} (\citeproc{ref-margot2024}{Bulbulia 2024}).
 
 \paragraph{Attitudes to Science and Scientists: Sample Means in Retained
 Sample}\label{attitudes-to-science-and-scientists-sample-means-in-retained-sample}
-
-Figure~\ref{fig-hist-outcomes} presents histograms of attitudes to
-science and scientists over time in the observed sample. As evident in
-the graphs, there is increasing average value placed on science over
-time in the retained sample, with a large boost evident in wave 2020
-(years 2020-2021). This boost coincides with the initially popular New
-Zealand COVID-19 pandemic response (\citeproc{ref-sibley2020a}{Sibley
-\emph{et al.} 2020}). Similarly, in the retained sample, trust in
-scientists grew, coinciding with New Zealand's COVID-19 pandemic
-response, and then stabalised, before falling in the most recent wave
-(years 2023-2024).
-
-\newpage{}
-
-\begin{figure}
-
-\centering{
-
-\pandocbounded{\includegraphics[keepaspectratio]{24-jk-growth-trust-science-T15_files/figure-pdf/fig-hist-outcomes-1.pdf}}
-
-}
-
-\caption{\label{fig-hist-outcomes}Historgram of sample attitudes to
-science over time in the retained sample.}
-
-\end{figure}%
 
 Table~\ref{tbl-sample-continuous} present sample average responses and
 categorical distributions of value placed on science and trust in
@@ -535,22 +526,24 @@ sizes and missing data counts for the wave 2019 cohort that dropped out
 or did not respond.
 
 Although average trust levels generally increased following New
-Zealand's initial response to COVID-19, we also note rising missingness
-over time. This suggests that straightforward interpretations of sample
-averages may be misleading, because, as noted earlier, individuals who
-become more sceptical of science may be less likely to remain in the
-study.
+Zealand's initial response to COVID-19
+(\citeproc{ref-sibley2020a}{Sibley \emph{et al.} 2020}), we also note
+increasing missingness over time. This suggests that straightforward
+interpretations of sample averages may be misleading, because,
+individuals who become more sceptical of science may be less likely to
+remain in the study run by scientists.
 
 Table~\ref{tbl-sample-continuous} shows that mean value placed on
-science rose from 5.56 in 2019 to 5.86 in 2023, while mean trust in
+science rose from 5.56 in 2019 to 5.86 in wave 2023, while mean trust in
 scientists increased from 5.30 to 5.55 between 2019 and 2020, stabilised
-through 2022, and then declined slightly to 5.45 in 2023. These observed
-increases, particularly for value placed on science following the New
-Zealand COVID-19 response, appear positive. However, missing responses
-grew markedly, from 563 in 2019 to 20,600 in 2023 for values of science,
-and from 1,257 in 2019 to 21,177 in 2023 for trust in scientists. Yet,
-as mentioned, this attrition may reflect systematic non-response related
-to mistrust.
+through wave 2022, and then declined to 5.45 in wave 2023, still higher
+than the baseline average in wave 2019. These observed increases,
+particularly for value placed on science following the New Zealand
+COVID-19 response, appear positive. However, missing responses grew
+markedly, from 563 in wave 2019 to 20,600 in wave 2023 for values of
+science, and from 1,257 in 2019 to 21,177 in wave 2023 for trust in
+scientists. Yet the trend will be biased if attrition reflects
+systematic non-response related to mistrust.
 
 \begin{longtable}[]{@{}
   >{\raggedright\arraybackslash}p{(\linewidth - 8\tabcolsep) * \real{0.1806}}
@@ -673,7 +666,7 @@ Level
 Table~\ref{tbl-sample-cat} categorises responses into low (1--3), medium
 (4--5), and high (6--7) ranges. For value placed on science, the
 proportion reporting low trust declined from 8.2\% in 2019 to 6.7\% in
-2023, while the proportion reporting high trust rose from 60.5\% to
+wave 2023, while the proportion reporting high trust rose from 60.5\% to
 70.1\% over the same period. \hyperref[appendix-c]{Appendix C}
 Figure~\ref{fig-alluv-science-sample} graphically displays these
 transitions.
@@ -684,15 +677,11 @@ reversal in later waves. \hyperref[appendix-c]{Appendix C}
 Figure~\ref{fig-alluv-scientists-sample} graphically displays these
 transitions.
 
-These shifts might convey a narrative of strengthening value of sceince
+These shifts might convey a narrative of strengthening value of science
 during early pandemic periods that continued to grow, with no evidence
 of increasing mistrust of scientists. Yet the steady increase in missing
 responses over time underscores the importance of careful
-interpretation. The observed improvements in attidutes towards science
-and scientists could be overstated if sceptical individuals
-disproportionately discontinued their participation.
-
-In other words, the rising average trust estimates may in part be an
+interpretation. The rising average trust estimates may in part be an
 artefact of differential attrition.
 
 \newpage{}
@@ -706,13 +695,13 @@ Table~\ref{tbl-sample-means-imp} shows the estimated mean responses for
 value placed on science and trust in scientists, pooled over multiple
 imputations to adjust for systematic missingness. Compared with the
 observed sample means, the imputed estimates suggest moderate trends.
-For valuing science, the average response is higher in 2020 than in
-2019, but then steadily declines from 5.7 in 2021 to 5.66 by 2023. For
-trust in scientists, the average increases from 5.29 to 5.47 between
-2019 and 2020 but then declines to 5.28 by 2023. These imputed estimates
-reveal a less linear increase in trust than the unadjusted data might
-suggest, with evidence of gradual erosion in trust in both domains over
-the later waves.
+For valuing science, the average response is higher in wave 2020 than in
+wave 2019, but then steadily declines from 5.7 in 2021 to 5.66 by wave
+2023. For trust in scientists, the average increases from 5.29 to 5.47
+between wave 2019 and wave 2020 but then declines to 5.28 by wave 2023.
+These imputed estimates reveal a less pronounced increase in trust than
+the unadjusted data might suggest, with evidence of erosion in trust in
+both domains over the later waves.
 
 \begin{longtable}[]{@{}
   >{\raggedright\arraybackslash}p{(\linewidth - 8\tabcolsep) * \real{0.3194}}
@@ -720,7 +709,7 @@ the later waves.
   >{\raggedright\arraybackslash}p{(\linewidth - 8\tabcolsep) * \real{0.1528}}
   >{\raggedright\arraybackslash}p{(\linewidth - 8\tabcolsep) * \real{0.1111}}
   >{\raggedright\arraybackslash}p{(\linewidth - 8\tabcolsep) * \real{0.1111}}@{}}
-\caption{Imputed average responses for the full 2019
+\caption{Imputed average responses for the full wave 2019
 cohort}\label{tbl-sample-means-imp}\tabularnewline
 \toprule\noalign{}
 \begin{minipage}[b]{\linewidth}\raggedright
@@ -772,8 +761,8 @@ upper
   >{\raggedright\arraybackslash}p{(\linewidth - 12\tabcolsep) * \real{0.1301}}
   >{\raggedright\arraybackslash}p{(\linewidth - 12\tabcolsep) * \real{0.1301}}
   >{\raggedright\arraybackslash}p{(\linewidth - 12\tabcolsep) * \real{0.1301}}@{}}
-\caption{Cohort proportions classified as low, medium, or high
-(imputed)}\label{tbl-sample-cat-imp}\tabularnewline
+\caption{Cohort proportions classified as low, medium, or high (imputed
+data)}\label{tbl-sample-cat-imp}\tabularnewline
 \toprule\noalign{}
 \begin{minipage}[b]{\linewidth}\raggedright
 Response
@@ -832,21 +821,23 @@ respondents reporting low trust remains relatively stable, hovering
 around 8\%-9\% over time. In contrast, the initially large high-trust
 category (around 60\%) rises to 65.8\% in 2020, then recedes to 62.8\%
 by 2023, suggesting that some of the early gains in trust may have been
-short-lived once nonresponse patterns are accounted for. For trust in
-scientists, imputation indicates a somewhat different trajectory.
-Initially, 11.9\% reported low trust in 2019, decreasing to 10.1\% in
-2020, but this figure rises back to 12.8\% by 2023. The medium and high
-categories show corresponding shifts, reflecting a more complex pattern
-than the non-imputed data suggested.
+short-lived. For trust in scientists a trajector of increasing mistrust.
+Initially, 11.9\% reported low trust in wave 2019, decreasing to 10.1\%
+in wave 2020, but this figure jumps to 12.8\% low mistrust by wave 2023.
+The medium and high categories show corresponding shifts, reflecting a
+more complex pattern than the non-imputed data would suggest, with
+diminishing trust at the high end of the scale.
 
-\hyperref[appendix-d]{Appendix d} Figure~\ref{fig-alluv-science-imp} and
+\hyperref[appendix-d]{Appendix D} Figure~\ref{fig-alluv-science-imp} and
 Figure~\ref{fig-alluv-scientists-imp} visually present these
-transitions. Although early gains in high trust appeared promising,
-shifts over time are not uniformly in one direction. Instead, the
-imputed data indicate gradual redistributions of respondents across low,
-medium, and high categories. Such patterns underscore the importance of
-correcting for missingness before drawing conclusions about
-population-level changes in trust.
+transitions. Although early gains in high trust appeared promising --
+for the perspective of science and scientists anyway -- inferred shifts
+over time are not uniformly in one direction. Instead, the imputed data
+indicate gradual redistributions of respondents across low, medium, and
+high categories, with low mistrust increasing and high trust declining.
+Such patterns underscore the importance of correcting for missingness
+before drawing conclusions about population-level changes in how people
+value science and trust scientists.
 
 \newpage{}
 
@@ -925,19 +916,20 @@ Years & Predicted (95\% CI)\\
 \end{table}%
 
 Figure~\ref{fig-science-continuous} presents the predicted population
-average value place on science over time. Panel \textbf{A} shows
+average value place on science over time. Panel \textbf{A} presents
 estimates without adjusting for missing responses. Panel \textbf{B}
-shows estimates that incorporate multiple imputation. These predictions,
-derived from generalised estimating equations, reflect the estimated
-population trajectories, either without or with adjustments for missing
-responses. As shown in Table~\ref{tbl-marginal-gee-science-observed},
-when missingness is not taken into account, valuing science appears to
-increase steadily from the baseline period to the final wave. However,
-after modelling missingness as reported in
-Table~\ref{tbl-marginal-gee-science-imputed}, the predicted trajectory
-suggests a more modest upward trend that does not continue to climb.
-This result shows that ignoring missing responses can inflate the
-perceived value of science in a longitudinal cohort.
+presents estimates that incorporate multiple imputation. These
+predictions, derived from generalised estimating equations, reflect the
+estimated population trajectories, either without or with adjustments
+for missing responses. As shown in
+Table~\ref{tbl-marginal-gee-science-observed}, when missingness is not
+taken into account, valuing science appears to increase steadily from
+the baseline period to the final wave. However, after modelling
+missingness as reported in Table~\ref{tbl-marginal-gee-science-imputed},
+the predicted trajectory implies a more modest upward trend that does
+not continue to climb. This result shows that ignoring missing responses
+can inflate the perceived value of science in a national longitudinal
+cohort.
 
 \newpage{}
 
@@ -1023,10 +1015,7 @@ trust increases when missingness is not accounted for. Yet when we
 adjust for missing data using multiple imputation, as reported in
 Table~\ref{tbl-marginal-gee-scietists-imputed}, the results suggest that
 the initial gains in trust may be smaller and less sustained than the
-unadjusted models imply. By properly adjusting for missingness, these
-analyses provide a clearer picture of true population-wide changes in
-trust, rather than relying on observed data that may disproportionately
-represent individuals who remain engaged in the study.
+unadjusted models suggest.
 
 \newpage{}
 
@@ -1132,7 +1121,11 @@ Years & Predicted (95\% CI) & Response\\
 
 Note that in Studies 1a and 1b, the response distributions are scattered
 across the response scale 1-7 (refer to
-Figure~\ref{fig-science-continuous}).
+Figure~\ref{fig-science-continuous}). We are encouraged that sampling in
+the New Zealand Attitudes and Values Study reaches science's
+discontents, even in the retained sample. Yet is not suprising that
+discontent leads to differential attrition. How bad is the bias in
+attrition?
 
 Figure~\ref{fig-science-categorical} displays predicted probabilities
 for classification as low (1--3), medium (4--5), or high (6--7) in the
@@ -1146,7 +1139,7 @@ Table~\ref{tbl-categorical-science-imputed}), the predicted
 probabilities show a less stable pattern, with gains in the high
 category tempered and the medium category becoming more prominent. These
 differences underscore that ignoring missing responses can create an
-artificial appearance of stronger sustained trust.
+artificial appearance of increasing value placed on science.
 
 \newpage{}
 
@@ -1267,37 +1260,47 @@ stable or increasing trust in scientists.
 \subsection{Discussion}\label{discussion}
 
 These findings illustrate that failing to adjust for missing responses
-can systematically distort estimates of public attitudes to science and
-scientists. Compared to models that ignore missingness, our
-imputation-adjusted analyses indicate that the unadjusted models
-overestimate the proportion of the population with high trust by several
-hundred thousand New Zealand adults and underestimate the proportion
-with low trust by tens to hundreds of thousands. For example, when the
-missing attitudes to science are not adjusted, we underestimate the
-share of the population with low trust by about 82,000 people, and
-simultaneously overstate the size of the high-trust group by about
-330,000. Similarly, for trust in scientists, the discrepancy in the
-low-trust population is about 165,000 individuals, and the high-trust
-category may be inflated by about 248,000. These differences represent
-substantial distortions of attitudes to science and scientists in the
-general population of 4.1 million adults.
+can systematically distort estimates of public attitudes toward science
+and scientists. How bad is this distortion?
 
-It is important to note, once again, that these are minimum bounds of
-potential distortion, as we cannot measure trust among the population
-who declined participation at the study's outset. Moreover, we have not
-established any causal relationships. Our objective is not to identify
-determinants of changing trust, but rather to describe and characterise
-differences in trust distributions over time in that part of the general
-population whose attitudes to science did not prevent them from
-enlisting in a scientific study prior to COVID-19. Still, given that
-trust in science can influence critical actions related to climate
+Compared to models that ignore missingness, our imputation-adjusted
+analyses indicate substantial population-level discrepancies. For
+example:
+
+\subsubsection{Trust in Science}\label{trust-in-science}
+
+Without adjusting for missing attitudes, we \textbf{underestimate} low
+trust by approximately 41,253 (minimal bias) to 82,507 (worst case)
+adults.
+
+Simultaneously, we \textbf{overestimate} high trust by about 247,520
+(minimal bias) to 371,281 (worst case) adults.
+
+\subsubsection{Trust in Scientists}\label{trust-in-scientists-1}
+
+For trust in scientists, the discrepancy in the low-trust population
+ranges from 41,253 (minimal bias) to 82,507 (worst case) adults.
+
+The high-trust category may be inflated by about 247,520 (minimal bias)
+to 330,027 (worst case) adults.
+
+These differences are not trivial, given a total adult population of
+about 4.1 million. Moreover, these bounds are likely conservative
+because we did not measure trust among individuals who declined
+participation at the outset.
+
+This is not a trivial matter. Trust in science can influence actions
+with far-reaching consequences, such as efforts to mitigate climate
 change (\citeproc{ref-bogert2024effect}{Bogert \emph{et al.} 2024}),
 vaccine uptake (\citeproc{ref-pagliaro2021trust}{Pagliaro \emph{et al.}
-2021}), and following health advice
-(\citeproc{ref-rueger2021perception}{Rueger \emph{et al.} 2021}),
-accurately documenting trust and its temporal shifts is a pressing
-concern. By accounting for missing data, we gain a clearer and more
-credible picture.
+2021}), and health-related decisions
+(\citeproc{ref-rueger2021perception}{Rueger \emph{et al.} 2021}). By
+accounting for missing data, we show that failing to adjust can
+substantially skew perceived levels of public trust in science and
+scientists. In practice, this means that decision-makers relying on
+unadjusted surveys risk misinterpreting the extent of public trust---and
+thus may not fully appreciate the scale of challenges or opportunities
+when shaping policy and communication strategies.
 
 \newpage{}
 
@@ -1317,22 +1320,26 @@ group hold full copies of the NZAVS data. A de-identified dataset
 containing only the variables analysed in this manuscript is available
 upon request from the corresponding author or any member of the NZAVS
 advisory board for replication or checking of any published study using
-NZAVS data. The code for the analysis can be found at: OSF-lINK TBA.
+NZAVS data. The code for the analysis can be found at:
+\href{https://osf.io/wgtz4/}{OSF link}.
 
 \subsubsection{Acknowledgements}\label{acknowledgements}
 
 The New Zealand Attitudes and Values Study is supported by a grant from
 the Templeton Religious Trust (TRT0196; TRT0418). JB received support
-from the Max Plank Institute for the Science of Human History. The
-funders had no role in preparing the manuscript or deciding to publish
-it.
+from the Max Plank Institute for the Science of Human History.
+{[}\textbf{To be filled out for all authors}{]}. The funders had no role
+in preparing the manuscript or deciding to publish it.
 
 \subsubsection{Author Statement}\label{author-statement}
 
-\textbf{TBA}: JK, CGS, DO, MW, and KY developed the measures for the New
-Zealand Attitudes and Values Study. JB developed the analytic approach
-and did the analysis. CGS led data collection. JB and CGS obtained the
-funding. \textbf{All authors had input into the manuscript.}
+\textbf{TBA:}
+
+JK led the study. JK, CGS, DO, MW, and KY developed the measures for the
+New Zealand Attitudes and Values Study. JB developed the analytic
+approach and did the analysis. CGS led data collection. JB and CGS
+obtained the funding. \textbf{All authors had input into the
+manuscript.}
 
 \newpage{}
 
@@ -1598,14 +1605,13 @@ to Social Value of Science and Trust in Scientists: Adjusting For
 Missing Data.}\label{appendix-d}
 
 Figure~\ref{fig-alluv-science-imp} and
-(\citeproc{ref-g-alluv-scientists-imp}{\textbf{g-alluv-scientists-imp?}})
-depict the dynamics of categorical responses for attitudes to science
-and scientists. Following 2020, there is a decline in the value placed
-on scientific institutions and a growth of mistrust in scientists. Our
-analysis presents the a minimal bound for such mistrust because we
-cannot account for the mistrust of the population who declined to
-praticipate in New Zealand Attitudes and Values Study wave 2019 (time
-11).
+Figure~\ref{fig-alluv-scientists-imp} depict the dynamics of categorical
+responses for attitudes to science and scientists. Following 2020, there
+is a decline in the value placed on scientific institutions and a growth
+of mistrust in scientists. Our analysis presents the a minimal bound for
+such mistrust because we cannot account for the mistrust of the
+population who declined to praticipate in New Zealand Attitudes and
+Values Study wave 2019 (time 11).
 
 \begin{figure}
 
@@ -1630,6 +1636,37 @@ value of science for the imputed cohort.}
 
 \caption{\label{fig-alluv-scientists-imp}Alluvial plot suggests declines
 in trust in scientists for the imputed cohort}
+
+\end{figure}%
+
+\newpage{}
+
+\subsection{Appendix E: Histogram of Responses By Wave Shows Declining
+Sample.}\label{appendix-E}
+
+Figure~\ref{fig-hist-outcomes} presents histograms of attitudes to
+science and scientists over time in the observed sample. As evident in
+the graphs, there is increasing average value placed on science over
+time in the retained sample, with a large boost evident in wave 2020
+(years 2020-2021). This boost coincides with the initially popular New
+Zealand COVID-19 pandemic response (\citeproc{ref-sibley2020a}{Sibley
+\emph{et al.} 2020}). Similarly, in the retained sample, trust in
+scientists grew, coinciding with New Zealand's COVID-19 pandemic
+response, and then stabalised, before falling in the most recent wave
+(years 2023-2024).
+
+\newpage{}
+
+\begin{figure}
+
+\centering{
+
+\pandocbounded{\includegraphics[keepaspectratio]{24-jk-growth-trust-science-T15_files/figure-pdf/fig-hist-outcomes-1.pdf}}
+
+}
+
+\caption{\label{fig-hist-outcomes}Historgram of sample attitudes to
+science over time in the retained sample.}
 
 \end{figure}%
 
@@ -1703,6 +1740,12 @@ regression models. \emph{Journal of Open Source Software},
 \textbf{3}(26), 772.
 doi:\href{https://doi.org/10.21105/joss.00772}{10.21105/joss.00772}.
 
+\bibitem[\citeproctext]{ref-parameters_2020}
+Lüdecke, D, Ben-Shachar, MS, Patil, I, and Makowski, D (2020)
+Extracting, computing and exploring the parameters of statistical models
+using {R}. \emph{Journal of Open Source Software}, \textbf{5}(53), 2445.
+doi:\href{https://doi.org/10.21105/joss.02445}{10.21105/joss.02445}.
+
 \bibitem[\citeproctext]{ref-mcneish_2017unnecessary}
 McNeish, D, Stapleton, LM, and Silverman, RD (2017) On the unnecessary
 ubiquity of hierarchical linear modeling. \emph{Psychological Methods},
@@ -1725,6 +1768,10 @@ Reif, A, and Guenther, L (2021) How representative surveys measure
 public (dis) trust in science: A systematisation and analysis of survey
 items and open-ended questions. \emph{Journal of Trust Research},
 \textbf{11}(2), 94--118.
+
+\bibitem[\citeproctext]{ref-table1_2023}
+Rich, B (2023) \emph{table1: Tables of descriptive statistics in HTML}.
+Retrieved from \url{https://CRAN.R-project.org/package=table1}
 
 \bibitem[\citeproctext]{ref-rueger2021perception}
 Rueger, J, Dolfsma, W, and Aalbers, R (2021) Perception of peer advice
@@ -1763,6 +1810,12 @@ s}, Fourth, New York: Springer. Retrieved from
 Wickham, H (2016) \emph{ggplot2: Elegant graphics for data analysis},
 Springer-Verlag New York. Retrieved from
 \url{https://ggplot2.tidyverse.org}
+
+\bibitem[\citeproctext]{ref-tidyverse_2019}
+Wickham, H, Averick, M, Bryan, J, \ldots{} Yutani, H (2019) Welcome to
+the {tidyverse}. \emph{Journal of Open Source Software}, \textbf{4}(43),
+1686.
+doi:\href{https://doi.org/10.21105/joss.01686}{10.21105/joss.01686}.
 
 \end{CSLReferences}
 
